examples/checker_tests/bad/equality-record.p4
control C() {
    apply {
        bool b = {a = 1, b = 2} == {b = 2, a = 1};
    }
}